--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,8 @@ overflow-y: scroll;
 
 body {
 margin: 0 auto;
-color: #555;
+color: #000000;
+background-color: #e0e0e0;
 font: normal 0.75em/150% Geneva, Helvetica, sans-serif, Verdana;
 letter-spacing: 1px;
 max-width: 1100px;
