--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ line-height: 1;
 }
 
 ol, ul {
-list-style: none;
+/*list-style: none;*/
 }
 
 table {
@@ -66,7 +66,7 @@ Styles starts
 */
 html {
 overflow-y: scroll;
-overflow-x: scroll;
+/*overflow-x: scroll;*/
 /* Horizontale Scrollbalken erzwingen */
 }
 
@@ -74,9 +74,9 @@ body {
 margin: 0 auto;
 color: #000000;
 background-color: #e0e0e0;
-font: normal 0.75em/150% Geneva, Helvetica, sans-serif, Verdana;
+font: normal 0.9em/150% Geneva, Helvetica, sans-serif, Verdana;
 letter-spacing: 1px;
-max-width: 1100px;
+max-width: 1100px;	/* gesamte seitenbreite */
 position: relative;
 }
 
@@ -133,7 +133,7 @@ border-right: 1px solid #355e64;
 
 /*
 Skiplinks
-*/
+
 #skiplinks {
 position: absolute;
 top: -1000px;
@@ -158,6 +158,7 @@ border-width: 1px 2px;
 border-radius: 10px;
 outline: 0;
 }
+*/
 
 /*
 Flexibles Design und die Leistung von Medienabfragen nutzen
@@ -287,6 +288,7 @@ padding: 25px 0 0;
 article p {
 margin: 25px 0;
 }
+/*
 article ul {
 margin-left: 15px;
 line-height: 170%;
@@ -296,7 +298,7 @@ article ul ul {
 margin-left: 25px;
 list-style: square;
 }
-
+*/
 article img {
 margin: 5px 5px 3px 15px;
 float: none;
