--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 
 
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
+h1, h2, h3, h4, h5, h6, p, blockquote,
+abbr, acronym, address, big, cite, code,
 del, dfn, em, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
@@ -13,12 +13,38 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-margin: 0;
-padding: 0;
-border: 0;
-font-size: 100%;
-font: inherit;
-vertical-align: baseline;
+	
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font-family: ;
+	letter-spacing: -0.0em;
+	vertical-align: baseline;
+}
+
+a {
+	/*font-family: Lucida Console, monospace;*/
+	font-weight: normal;
+	/*font-family: FreeMono, Lucida Console, FreeMono, monospace;*/
+	letter-spacing: normal;
+	font-size: 100%;
+}
+
+pre
+{
+  font-family: Unifont, FreeMono, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, monospace, serif;
+  font-weight: normal;
+  font-size: 1.2em;
+  margin-bottom: 10px;
+  overflow: auto;
+  width: auto;
+  padding: 15px;
+  color: #ffffff;
+  background-color: #000000;
+  width: 650px!ie7;
+  padding-bottom: 20px!ie7;
+  max-height: 600px;
 }
 
 body {
@@ -73,7 +99,7 @@ overflow-y: scroll;
 body {
 margin: 0 auto;
 color: #000000;
-background-color: #e0e0e0;
+background-color: #f0f0f0;
 font: normal 0.9em/150% Geneva, Helvetica, sans-serif, Verdana;
 letter-spacing: 1px;
 max-width: 1100px;	/* gesamte seitenbreite */
